@@ -24,8 +24,9 @@
 #  If not, write to the Free Software Foundation,
 #  59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
-GMAKE = `whereis -b gmake`
-GDB = `whereis -b gdb`
+# TODO: Make sure if it's portable
+GMAKE = `which -b gmake`
+GDB = `which -b gdb`
 
 #
 # Flags dealing with compiling and linking
@@ -48,7 +49,8 @@ ADDITIONAL_INCLUDE_DIRS += -I./ -I./Headers
 ADDITIONAL_LDFLAGS +=
 
 # Additional library directories the linker should search
-ADDITIONAL_LIB_DIRS += -L./Library/ProjectCenter.framework/Versions/Current
+ADDITIONAL_LIB_DIRS += -L./Library/ProjectCenter.framework/Versions/Current \
+                       -L./Library/ProjectCenter.framework
 
 # Additional LDFLAGS to pass to the linker
 ADDITIONAL_GUI_LIBS += -lProjectCenter
